name:                LiquidCheck
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Eric Seidel
maintainer:          eseidel@cs.ucsd.edu
-- copyright:           
category:            Testing
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  exposed-modules:     Test.LiquidCheck
  -- other-modules:       
  -- other-extensions:
  build-depends:       base >=4.6 && <4.7,
                       filepath >= 1.3.0.1,
                       directory >= 1.2.0.1,
                       ghc >= 7.6.3,
                       template-haskell,
                       unordered-containers >= 0.2.3.0,
                       text >= 0.11.3.1,
                       containers >= 0.5.0.0,
                       mtl >= 2.1.2,
                       liquid-fixpoint >= 0.2,
                       liquidhaskell >= 0.2,
                       pretty,
                       data-default >= 0.5.3,
                       tagged,
                       text-format,
                       vector

benchmark bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  ghc-options:         -Wall -O2
  main-is:             Main.hs
  build-depends:       base,
                       criterion < 0.8,
                       hastache < 0.6,
                       statistics < 0.11,
                       LiquidCheck,
                       liquidhaskell >= 0.2,
                       QuickCheck >= 2.6,
                       smallcheck >= 1.1
