name:                LiquidCheck
version:             0.1.0.0
synopsis:            Generate test-suites from types.
description:         Generate test-suites from types.
license:             MIT
license-file:        LICENSE
author:              Eric Seidel
maintainer:          eseidel@cs.ucsd.edu
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git://github.com/gridaphobe/liquidcheck.git

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -O2
  ghc-prof-options:    -fprof-auto -caf-all
  exposed-modules:     Test.LiquidCheck,
                       Test.LiquidCheck.Constrain,
                       Test.LiquidCheck.Driver,
                       Test.LiquidCheck.Eval,
                       Test.LiquidCheck.Expr,
                       Test.LiquidCheck.Gen,
                       Test.LiquidCheck.Testable,
                       Test.LiquidCheck.Types,
                       Test.LiquidCheck.Util

  build-depends:       transformers >= 0.4.1.0,
                       base >=4.6 && <4.7,
                       filepath >= 1.3.0.1,
                       directory >= 1.2.0.1,
                       ghc >= 7.6.3,
                       unordered-containers >= 0.2.3.0,
                       text >= 0.11.3.1,
                       containers >= 0.5.0.0,
                       mtl >= 2.1.2,
                       liquid-fixpoint >= 0.2,
                       liquidhaskell >= 0.2,
                       pretty,
                       data-default >= 0.5.3,
                       tagged,
                       text-format,
                       syb >= 0.4.2,
                       vector

benchmark bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  ghc-options:         -O2
  ghc-prof-options:    -fprof-auto -caf-all
  main-is:             Main.hs
  build-depends:       base,
                       aeson,
                       -- for XMonad
                       X11,
                       containers,
                       random,
                       tagged,
                       ghc,
                       unordered-containers,
                       mtl >= 2.1.2,
                       -- for Data.Map
                       deepseq,
                       --
                       criterion < 0.8,
                       hastache < 0.6,
                       statistics < 0.11,
                       LiquidCheck,
                       liquidhaskell >= 0.2,
                       QuickCheck >= 2.6,
                       smallcheck >= 1.1

test-suite test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  ghc-options:         -O2
  main-is:             Main.hs
  c-sources:           cbits/fpstring.c
  include-dirs:        include
  includes:            fpstring.h
  build-depends:       base,
                       LiquidCheck,
                       liquidhaskell >= 0.2,
                       QuickCheck >= 2.6,
                       smallcheck >= 1.1,
                       tasty >= 0.8,
                       tasty-hunit >= 0.8,
                       -- for Data.Map
                       containers,
                       deepseq,
                       -- for ByteString
                       array,
                       tagged,
                       mtl,
                       ghc-prim,
                       liquid-fixpoint,
                       liquidhaskell,
                       unordered-containers

executable liquid-check
  default-language: Haskell2010
  hs-source-dirs: bin
  main-is:        LiquidCheck.hs
  build-depends:  base,
                  LiquidCheck,
                  ghc,
                  ghc-paths,
                  directory,
                  filepath,
                  process,
                  text,
                  time,
                  transformers
