name:                LiquidCheck
version:             0.1.0.0
synopsis:            Generate test-suites from types.
description:         Generate test-suites from types.
license:             MIT
license-file:        LICENSE
author:              Eric Seidel
maintainer:          eseidel@cs.ucsd.edu
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git://github.com/gridaphobe/liquidcheck.git

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-prof-options:    -fprof-auto -caf-all
  exposed-modules:     Test.LiquidCheck,
                       Test.LiquidCheck.Constrain,
                       Test.LiquidCheck.Constrain.Function,
                       Test.LiquidCheck.Driver,
                       Test.LiquidCheck.Eval,
                       Test.LiquidCheck.Expr,
                       Test.LiquidCheck.Gen,
                       Test.LiquidCheck.Testable,
                       Test.LiquidCheck.Types,
                       Test.LiquidCheck.Util

  build-depends:       base >=4.6 && <5
                     , containers >= 0.5.0.0
                     , data-default >= 0.5.3
                     , data-timeout >= 0.3
                     , directory >= 1.2.0.1
                     , exceptions >= 0.6
                     , filepath >= 1.3.0.1
                     , ghc >= 7.8.3
                     , ghc-paths
                     , liquid-fixpoint >= 0.2
                     , liquidhaskell >= 0.2
                     , mtl >= 2.1.2
                     , pretty
                     , process
                     , syb >= 0.4.2
                     , tagged >= 0.7
                     , text >= 0.11.3.1
                     , text-format
                     , transformers >= 0.3
                     , unordered-containers >= 0.2.3.0
                     , vector

benchmark bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  ghc-options:         -O2
  ghc-prof-options:    -fprof-auto -caf-all
  main-is:             Main.hs
  build-depends:       base,
                       aeson,
                       bytestring,
                       cassava,
                       SafeSemaphore,
                       vector,
                       xml-conduit,
                       data-timeout >= 0.3,
                       -- for XMonad
                       -- X11,
                       containers,
                       random,
                       tagged,
                       ghc,
                       unordered-containers,
                       mtl,
                       -- for Data.Map
                       deepseq,
                       --
                       --criterion,
                       --hastache,
                       --statistics,
                       time,
                       LiquidCheck,
                       liquidhaskell >= 0.2,
                       liquid-fixpoint,
                       QuickCheck >= 2.6,
                       smallcheck >= 1.1

test-suite test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  ghc-options:         -O2
  main-is:             Main.hs
  c-sources:           cbits/fpstring.c
  include-dirs:        include
  includes:            fpstring.h
  build-depends:       base,
                       LiquidCheck,
                       ghc,
                       liquidhaskell >= 0.2,
                       tasty >= 0.8,
                       tasty-hunit >= 0.8,
                       -- for Data.Map
                       containers,
                       deepseq,
                       -- for ByteString
                       array,
                       tagged,
                       mtl,
                       ghc-prim,
                       liquid-fixpoint,
                       liquidhaskell,
                       unordered-containers

-- executable liquid-check
--   default-language: Haskell2010
--   hs-source-dirs: bin
--   main-is:        LiquidCheck.hs
--   build-depends:  base,
--                   LiquidCheck,
--                   liquid-fixpoint,
--                   data-timeout >= 0.3,
--                   ghc,
--                   ghc-paths,
--                   directory,
--                   filepath,
--                   process,
--                   text,
--                   time,
--                   transformers
